2016-05-12  Eli Zaretskii  <eliz@gnu.org>

	* nonposix.h: Add prototypes for Posix functions emulated in pc/*
	files.

2016-05-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* builtin.c (format_tree): After the string has been rendered, use
	realloc to shrink the buffer to the needed size. Otherwise, the minimum
	buffer size of 512 bytes can result in lots of wasted memory if many
	sprintf results are stored in an array.

2016-05-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkapi.h (gawk_api_major_version, gawk_api_minor_version): Add
	CPP #define values to support conditional compilation.

2016-05-02         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h, dfa.c: Sync with grep.
	* re.c (research): Adjust type of try_backref.

2016-05-02         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (success_node): Declare.
	* array.c (success_node): Define.
	* cint_array.c, int_array.c, str_array.c: Use `& success_node'
	instead of `(NODE **) ! NULL' to indicate success throughout.
	Thanks to Pat Rankin for the cleanup suggestion.

2016-04-27         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (set_RS): Use rs1scan if do_traditional, even if length
	of RS is > 1.  Bug reported by Glauco Ciullini
	<glauco.ciullini6245@gmail.com>.

2016-04-24         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2016-04-11         Arnold D. Robbins     <arnold@skeeve.com>

	* regex_internal.c: Replace _GL_ATTRIBUTE_PURE with
	__attribute__.

2016-04-11         Arnold D. Robbins     <arnold@skeeve.com>

	* regexec.c: Stamp out last remaining use of __attribute.
	* regcomp.c: Undo change of 2016-01-24 when parsing single-byte
	ranges. Go back to treating them as bytes and not as characters.
	The change broke things on Windows in non-UTF-8 character sets.
	* mbsupport.h (mbstate_t): Define to int.
	Update copyright.

2016-04-10         John E. Malmberg      <wb8tyw@qsl.net>
