@@ -52,6 +52,9 @@ EXTRA_DIST = \
 	argarray.ok \
 	argtest.awk \
 	argtest.ok \
+	arrayind1.awk \
+	arrayind1.in \
+	arrayind1.ok \
 	arrayparm.awk \
 	arrayparm.ok \
 	arrayprm2.awk \
@@ -1041,7 +1044,7 @@ CLEANFILES = core core.* fmtspcl.ok
 
 # try to keep these sorted. each letter starts a new line
 BASIC_TESTS = \
-	addcomma anchgsub argarray arrayparm arrayprm2 arrayprm3 \
+	addcomma anchgsub argarray arrayind1 arrayparm arrayprm2 arrayprm3 \
 	arrayref arrymem1 arryref2 arryref3 arryref4 arryref5 arynasty \
 	arynocls aryprm1 aryprm2 aryprm3 aryprm4 aryprm5 aryprm6 aryprm7 \
 	aryprm8 aryprm9 arysubnm asgext awkpath \
