@@ -1,0 +1,9 @@
+recoding animals
+in the loop:                3
+in the loop:                3
+in the loop:                3
+at the end:                 3
+               1               0               0  00000757740011               0               0               0
+               2               0               0      1975su1du1               0               0               0
+               3               2               2  00000779770060      1975su1du1      1975su1du1               1
+               4               3               1  64000757790003  00000779770060  00000757740011               2
