@@ -1,3 +1,8 @@
+2016-05-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (arrayind1): New test.
+	* arrayind1.awk, arrayind1.in, arrayind1.ok: New files.
+
 2016-04-27         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (rscompat): New test.
