@@ -1,3 +1,8 @@
+2016-05-12         Arnold Robbins       <arnold@skeeve.com>
+
+	* str_array.c (str_lookup): Remove MAYBE_NUM from subscript flags.
+	Bug reported by Andres Legarra <Andres.Legarra@toulouse.inra.fr>.
+
 2016-05-12  Eli Zaretskii  <eliz@gnu.org>
 
 	* nonposix.h: Add prototypes for Posix functions emulated in pc/*
